--- a/sub/styl.css
+++ b/sub/styl.css
@@ -1,7 +1,7 @@
 body {
 	background-image: url("prente/strand.jpg"); 
 	text-align: center;
-	background-repeat: no-repeat;
+	background-repeat: repeat;
   	background-size: 100% 100%;		
 }
 
