--- a/styl.css
+++ b/styl.css
@@ -2,7 +2,7 @@ body {
 	background-image: url("prente/joburg.jpg"); 
 	text-align: center;
 	background-repeat: repeat;
-  	background-size: 100% 100%;	
+  	background-size: 100%;
 }
 
 
